@@ -5,8 +5,8 @@
 export DYLD_LIBRARY_PATH=/usr/local/Cellar/ffmpeg/2.8/lib:$DYLD_LIBRARY_PATH
 
 #JAVA_HOME=`/usr/libexec/java_home`
-#JAVA_HOME=`/usr/libexec/java_home -version 1.8`
-JAVA_HOME=`/usr/libexec/java_home -version 11`
+JAVA_HOME=`/usr/libexec/java_home -version 1.8`
+#JAVA_HOME=`/usr/libexec/java_home -version 11`
 PATH=$JAVA_HOME/bin:$PATH
 export JAVA_HOME PATH
 
@@ -14,5 +14,5 @@ export SWT_CLASSPATH=`pwd`/lib/swt/cocoa-macosx-x86_64/swt.jar
 
 spath=`dirname $0`
 
-. $spath/tests.sh  $JAVA_HOME/bin/java --illegal-access=warn ../build-macosx $*
+. $spath/tests.sh  $JAVA_HOME/bin/java -DummyArg ../build-macosx $*
 
